<resources>
    <string name="app_name">My Modules</string>
    <string name="C346">C346 Android Programming</string>
    <string name="C349">C349 Ipad Programming</string>
    <string name="back">Back</string>
    <string name="venue">Venue:</string>
    <string name="module_credit">Module Credit:</string>
    <string name="semester">Semester:</string>
    <string name="academic_year">Academic Year:</string>
    <string name="module_name">Module Name:</string>
    <string name="module_code">Module Code:</string>
</resources>
