<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ModuleDetailActivity">


    <TextView
        android:id="@+id/textViewModCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_code" />

    <TextView
        android:id="@+id/textViewModName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_name" />

    <TextView
        android:id="@+id/textViewAY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/academic_year" />

    <TextView
        android:id="@+id/textViewSem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/semester" />

    <TextView
        android:id="@+id/textViewModCre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/module_credit" />

    <TextView
        android:id="@+id/textViewVenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venue" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>